k8s01-den1/warehouse20/tautulli-gooery/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-gooery
  namespace: warehouse20
  labels:
    app: tautulli
    instance: gooery
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
  selector:
    app: tautulli
    instance: gooery
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli-gooery
  namespace: warehouse20
  labels:
    app: tautulli
    instance: gooery
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.tautulli: glob:v2.*
spec:
  serviceName: tautulli-gooery
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: tautulli
      instance: gooery
  template:
    metadata:
      labels:
        app: tautulli
        instance: gooery
    spec:
      automountServiceAccountToken: false
      containers:
      - name: tautulli
        image: "tautulli/tautulli:v2.5.0-beta"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
          name: http
        resources:
          requests:
            cpu: 200m
            memory: "512Mi"
          limits:
            cpu: 2000m
            memory: "2048Mi"
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: data
        livenessProbe:
          httpGet:
            path: /status
            port: http
          initialDelaySeconds: 90
        readinessProbe:
          httpGet:
            path: /status
            port: http
          initialDelaySeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 1100
        runAsGroup: 1100
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-gooery-data
